--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/favicon.jpeg" type="image/jpeg">
-    <title>Google | Clone</title>
+    <title>Google</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,13 +21,13 @@
                 </li>
                 <li class="nav-item">
                     <a href="http://" target="_blank" rel="noopener noreferrer">
-                        <i class="fas fa-ellipsis-h"></i>
+                        <img src="/Gapps-icon .svg" alt="gapps-icon">
                     </a>
                 </li>
-                <li class="nav-item-img">
+                <li class="nav-item" id="signin-btn">
                     <a href="http://" target="_blank" rel="noopener noreferrer">
-                        <img src="/iconfinder_user-alt_285645.png" alt="user">
-                    </a>
+                        Sign In
+                    </a> 
                 </li>
             </ul>
         </div>
@@ -37,6 +37,9 @@
             <img class="google-logo-img" src="/google-logo.png" alt="google-logo">
         </div>
         <div class="google-search-bar">
+            <span>
+
+            </span>
             <input id="search-bar" type="text" name="search-bar">
         </div>
         <div class="buttons">
