--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="nav-item">
                     <a href="http://" target="_blank" rel="noopener noreferrer">Images</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="nav-item-icon">
                     <a href="http://" target="_blank" rel="noopener noreferrer">
                         <img src="/Gapps-icon .svg" alt="gapps-icon">
                     </a>
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="footer-1">
-        <span style="margin-left: 20px;">India</span>
+        <span class="footer-txt" style="margin-left: 20px;">India</span>
     </div>
     <hr style="margin: 0; padding:0; color:#fcfcfc">
     <div class="footer-2">
