--- a/index.html
+++ b/index.html
@@ -62,21 +62,23 @@
             <a href="">ਪੰਜਾਬੀ</a> 
         </div>
     </div>
-    <div class="footer-1">
-        <span class="footer-txt" style="margin-left: 20px;">India</span>
-    </div>
-    <hr style="margin: 0; padding:0; color:#fcfcfc">
-    <div class="footer-2">
-        <div class="footer-2-left">
-            <a class="footer-txt" href="">About</a>
-            <a class="footer-txt" href="">Advertising</a>
-            <a class="footer-txt" href="">Business</a>
-            <a class="footer-txt" href="">How Search works</a>
+    <div class="footer">
+        <div class="footer-1">
+            <span class="footer-txt" style="margin-left: 20px;">India</span>
         </div>
-        <div class="footer-2-right">
-            <a href="" class="footer-txt">Privacy</a>
-            <a href="" class="footer-txt">Terms</a>
-            <a href="" class="footer-txt">Settings</a>
+        <hr style="margin: 0; padding:0; color:#fcfcfc">
+        <div class="footer-2">
+            <div class="footer-2-left">
+                <a class="footer-txt" href="">About</a>
+                <a class="footer-txt" href="">Advertising</a>
+                <a class="footer-txt" href="">Business</a>
+                <a class="footer-txt" href="">How Search works</a>
+            </div>
+            <div class="footer-2-right">
+                <a href="" class="footer-txt">Privacy</a>
+                <a href="" class="footer-txt">Terms</a>
+                <a href="" class="footer-txt">Settings</a>
+            </div>
         </div>
     </div>
 </body>
