minor fixes-navbar

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <div class="nav-div">
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">Gmail</a>
+                    <a href="" rel="noopener noreferrer">Gmail</a>
                 </li>
                 <li class="nav-item">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">Images</a>
+                    <a href="" rel="noopener noreferrer">Images</a>
                 </li>
                 <li class="nav-item" id="nav-item-icon">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <a href="" rel="noopener noreferrer">
                         <img src="/Gapps-icon .svg" alt="gapps-icon">
                     </a>
                 </li>
                 <li class="nav-item" id="signin-btn">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <a href="" rel="noopener noreferrer">
                         Sign In
                     </a> 
                 </li>
