--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="buttons">
             <a href="" class="btn" id="GoogleSearch">Google Search</a>
-            <a href="" class="btn" id="ImFeelingLucky">I'm Feeling Lucky</a>
+            <a href="" class="btn" id="ImFeelingLucky">I'm Kamal</a>
         </div>
         <div class="covid-19">
             <a href="">Get COVID-19 facts from top health officials</a>
