--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <a href="">ગુજરાતી</a> 
             <a href="">ಕನ್ನಡ</a> 
             <a href="">മലയാളം</a> 
-            <a href="">ਪੰਜਾਬੀ</a> 
+            <a href="">ਪੰਜਾਬੀ</a>
+            <a href="/subpage.html">Go to sub page</a> 
         </div>
     </div>
     <div class="footer">
