Added Third Page

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <a href="">ಕನ್ನಡ</a> 
             <a href="">മലയാളം</a> 
             <a href="">ਪੰਜਾਬੀ</a> 
+            <a href="/thirdpage.html">Go to Third Page</a>
         </div>
     </div>
     <div class="footer">
